# evolution-simulation

./: .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  lib.rs  statistics.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: activation.rs  layer.rs  lib.rs  network.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: config.rs  lib.rs
libs/simulation/src/: body.rs  brain.rs  config.rs  creature.rs  creature_individual.rs  eye.rs  food.rs  lib.rs  world.rs
libs/simulation/tests/: integration.rs
public/: index.html
src/: App.css  App.js  App.tsx  index.css  index.js  index.tsx  interfaces.ts
src/components/: Canvas.css  Canvas.d.ts  Canvas.js  ConfigForm.css  ConfigForm.js  Controls.js  Extinction.js  LeftSidebar.js  Modal.css  Modal.js  RightSidebar.js  Simulation.js  Simulation.tsx  Statistics.js
src/components/modals/: ConfigForm.css  ConfigForm.js  ConfigForm.tsx  Entry.css  Entry.js  Entry.tsx  Extinction.css  Extinction.js  Extinction.tsx  Modal.css  Modal.js  Modal.tsx
src/components/sidebars/: Controls.css  Controls.js  Controls.tsx  LeftSidebar.js  LeftSidebar.tsx  RightSidebar.js  (+4 more)
src/context/: SimContext.js  SimContext.tsx
src/hooks/: useSim.js  useSim.tsx
www/: index.css  index.html  index.js  package-lock.json
