[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.3", features = ["js"] }
lib-simulation = { path = "../simulation" }
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
